--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ header,
 section h2,
 section h3,
 form button {
-    font-family: 'Bungee', cursive;
+    font-family: 'Satisfy';
     font-weight: normal;
 }
 
@@ -18,7 +18,7 @@ body, input, textarea {
 
 header {
     padding: 16px 0;
-    background-color: #182C61;
+    background-color: #8f340f;
     color: #ecf0f1;
 }
 
@@ -68,7 +68,7 @@ section h2 {
 }
 
 section {
-    color: #182C61;
+    color: #70430f;
 }
 
 section p {
@@ -120,22 +120,22 @@ section h3 {
 }
 
 form button {
-    background-color: #182C61;
+    background-color: #613f18;
     color: #ecf0f1;
     border: none;
     cursor: pointer;
 }
 
 form button:hover {
-    background-color: #2e56c2;
+    background-color: #a01f1f;
 }
 
 input:focus, textarea:focus {
-    outline-color: #182C61;
+    outline-color: #700a0a;
 }
 
 footer {
-    background-color: #182C61;
+    background-color: #6d4614;
     color: #ecf0f1;
     padding: 16px 0;
 }
